[tool.poetry]
name = "repl_python3_lesson10-geocoding-a5719069"
version = "0.1.0"
description = ""
authors = ["a5719069 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyproj = "^3.1.0"
Shapely = "^1.7.1"
geojson = "^2.5.0"
geopandas = "^0.9.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
